Add password field to query GUI

--- a/eg/query-gui-mongodb.ipynb
+++ b/eg/query-gui-mongodb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ready-recommendation",
+   "id": "induced-organizer",
    "metadata": {},
    "source": [
     "# MongoDB metadata query GUI\n",
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "maritime-protein",
+   "execution_count": 1,
+   "id": "tutorial-thumbnail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,26 +44,70 @@
     "import iris\n",
     "import pymongo\n",
     "\n",
-    "import mongodb"
+    "import metadatabase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "toxic-mouse",
+   "execution_count": 4,
+   "id": "absolute-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to mongoDB instance.\n",
-    "pw = os.environ[\"MDB_ATLAS_IRIS_PW\"]\n",
-    "conn_str = f\"mongodb+srv://iris:{pw}@iris-example-data.omfld.mongodb.net/?retryWrites=true&w=majority\"\n",
-    "client = mongodb.client.Client(host=conn_str)"
+    "def authenticate(b):\n",
+    "    \"\"\"Handle connecting to a mongoDB Atlas database\"\"\"\n",
+    "    conn_str = f\"mongodb+srv://iris:{pw.value}@iris-example-data.omfld.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "    try:\n",
+    "        global client\n",
+    "        client = metadatabase.client.Client(host=conn_str)\n",
+    "        db_names = list(client.collection_names.keys())\n",
+    "        db.set_trait(\"options\", db_names)\n",
+    "        query.set_trait(\"disabled\", False)\n",
+    "        search.set_trait(\"disabled\", False)\n",
+    "    except Exception as e:\n",
+    "        with login_output:\n",
+    "            print(f\"Login unsuccessful. Original error was:\\n{e}\")\n",
+    "    else:\n",
+    "        with login_output:\n",
+    "            print(\"Successfully logged in.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "treated-region",
+   "id": "double-default",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Login handler widgets.\n",
+    "pw = widgets.Password(\n",
+    "    value=\"\",\n",
+    "    placeholder=\"mongoDB Atlas password...\",\n",
+    "    description=\"Password:\",\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "login = widgets.Button(description=\"Log In\")\n",
+    "login.on_click(authenticate)\n",
+    "\n",
+    "login_output = widgets.Output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fluid-arlington",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display login handler widgets.\n",
+    "widgets.VBox([widgets.HBox([pw, login]), login_output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "linear-rover",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +157,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wicked-penny",
+   "id": "stylish-minutes",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up widgets and callbacks.\n",
     "db = widgets.Dropdown(\n",
-    "    options=list(client.collection_names.keys()),\n",
+    "    options=[\"Log in first...\"],\n",
     "    description='DB:',\n",
     "    disabled=False\n",
     ")\n",
     "db.observe(on_select_change, names=\"value\")\n",
     "\n",
     "coll = widgets.Dropdown(\n",
-    "    options=client.collection_names[db.value],\n",
+    "    options=[\"Log in first...\"],\n",
     "    description=\"Collection:\",\n",
     "    disabled=False\n",
     ")\n",
@@ -135,11 +179,11 @@
     "    value=\"\",\n",
     "    placeholder='e.g. {\"standard_name\": \"air_temperature\"}',\n",
     "    description='query =',\n",
-    "    disabled=False\n",
+    "    disabled=True\n",
     ")\n",
     "\n",
-    "button = widgets.Button(description=\"Search\")\n",
-    "button.on_click(on_button_click)\n",
+    "search = widgets.Button(description=\"Search\", disabled=True)\n",
+    "search.on_click(on_button_click)\n",
     "\n",
     "list_out = widgets.Output()\n",
     "cl_out = widgets.Output()"
@@ -147,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-segment",
+   "id": "immune-picture",
    "metadata": {},
    "source": [
     "## Query\n",
@@ -158,12 +202,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functioning-multimedia",
+   "id": "limited-merchant",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up output display.\n",
-    "widgets.VBox([widgets.HBox([widgets.VBox([db, coll]), query, button]), list_out, cl_out])"
+    "widgets.VBox([widgets.HBox([widgets.VBox([db, coll]), query, search]), list_out, cl_out])"
    ]
   }
  ],
