Add auth note to example nb

--- a/eg/query-gui-mongodb.ipynb
+++ b/eg/query-gui-mongodb.ipynb
@@ -94,6 +94,15 @@
    ]
   },
   {
+   "source": [
+    "## Authenticate\n",
+    "\n",
+    "Before you can submit queries you must first authenticate with mongoDB Atlas."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fluid-arlington",
