--- a/eg/query-gui-mongodb.ipynb
+++ b/eg/query-gui-mongodb.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "## Authenticate\n",
     "\n",
-    "Before you can submit queries you must authenticate with mongoDB Atlas."
+    "In order to submit queries you must first authenticate with mongoDB Atlas."
    ],
    "cell_type": "markdown",
    "metadata": {}
