Update wording of GUI example intro

--- a/eg/query-gui-mongodb.ipynb
+++ b/eg/query-gui-mongodb.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# MongoDB metadata query GUI\n",
     "\n",
-    "Submit queries to a specific mongoDB database and collection via a GUI composed of IPyWidgets. The query string must be a Python dictionary containing key-value pairs, where the keys are any element of Iris cube metadata, and the values are any valid value for the item of metadata specified in the key. For example:\n",
+    "Here's a GUI for handling query submission to a metadata database and presentation of result datasets that match submitted queries.\n",
+    "\n",
+    "The query string must be a Python dictionary containing key-value pairs, where the keys are any element of Iris cube metadata, and the values are any valid value for the item of metadata specified in the key. For example:\n",
     "\n",
     "```python\n",
     "{\"standard_name\": \"air_temperature\"}  # Standard name lookup.\n",
@@ -205,7 +207,7 @@
    "source": [
     "## Query\n",
     "\n",
-    "Select a mongoDB database (`DB`) and collection, then enter your query as a Python dict. Hit `Search` to run the query."
+    "Select a database (`DB`) and collection, then enter your query as a Python dict. Hit `Search` to run the query."
    ]
   },
   {
